--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -1,2 +1,5 @@
 ru:
-  hello: "Hello world"
+  title: "Флешкарточкер"
+  all_cards: "Все карточки"
+  add_card: "Добавить карточку"
+  desc: "Первый в мире удобный менеджер флеш-карточек. Именно так."
