--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -3,3 +3,5 @@ ru:
   all_cards: "Все карточки"
   add_card: "Добавить карточку"
   desc: "Первый в мире удобный менеджер флеш-карточек. Именно так."
+  original_text: "Оригинал"
+  translated_text: "Перевод"
