--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -5,3 +5,4 @@ ru:
   desc: "Первый в мире удобный менеджер флеш-карточек. Именно так."
   original_text: "Оригинал"
   translated_text: "Перевод"
+  review_date: "Дата просмотра"
