--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -7,6 +7,8 @@ ru:
   translated_text: "Перевод"
   review_date: "Дата просмотра"
   action: "Действие"
-  original_text_input: "Введите фразу на Вашем языке"
+  original_text_input: "Введите фразу для перевода"
   translated_text_input: "Введите перевод"
   review_date_input: "Введите дату просмотра"
+  original_text_input_err: "Пожалуйста введите фразу."
+  translated_text_input_err: "Пожалуйста введите перевод."
