--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -5,7 +5,7 @@ ru:
   desc: "Первый в мире удобный менеджер флеш-карточек. Именно так."
   original_text: "Оригинал"
   translated_text: "Перевод"
-  review_date: "Дата просмотра"
+  review_date: "Дата пересмотра"
   action: "Действие"
   original_text_input: "Введите фразу для перевода"
   translated_text_input: "Введите перевод"
