--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -16,3 +16,4 @@ ru:
   delete_card_confirm: "Вы хотите удалить эту карточку?"
   orig_text_trn_text_match_err: "Фраза для перевода не должна совпадать с переводом"
   edit_card: "Редактировать карточку"
+  card_create: "Карточка успешно создана"
