--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -2,11 +2,11 @@ en:
   title: "Flashcards"
   all_cards: "All cards"
   add_card: "Add card"
-  desc: "The world's first handy flash card manager. Exactly."
+  desc: "The world's first handy flash card manager. No jokes."
   original_text: "Original text"
   translated_text: "Translated text"
   review_date: "Review date"
   action: "Action"
   delete_card_confirm: "Do you sure? You deleting this card!"
   edit_card: "Edit card"
-  card_create: "Card successfully create"
+  card_create: "Card successfully created"
