--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -10,4 +10,5 @@ ru:
   delete_card_confirm: "Вы хотите удалить эту карточку?"
   orig_text_trn_text_match_err: "Фраза для перевода не должна совпадать с переводом"
   edit_card: "Редактировать карточку"
-  card_create: "Карточка успешно создана"
+  card_created: "Карточка успешно создана"
+  card_updated: "Карточка обновлена"
