--- a/config/locales/simple_form.ru.yml
+++ b/config/locales/simple_form.ru.yml
@@ -1,10 +1,10 @@
 ru:
+  helpers:
+    submit:
+      card:
+        create: 'Создать карточку'
+        update: 'Обновить карточку'
   simple_form:
-    helpers:
-      submit:
-        card:
-          create: 'Создать карточку'
-          edit: 'Редактировать карточку'
     required:
       text: 'обязательное поле'
       mark: '*'
@@ -17,8 +17,3 @@ ru:
       card:
           original_text: 'Ваша фраза для перевода'
           translated_text: 'Перевод'
-    errors:
-      card:
-          original_text: 'Пожалуйста введите фразу'
-          translated_text: 'Пожалуйста введите перевод'
-          review_date: 'Пожалуйста выберите дату'
