--- a/config/locales/simple_form.en.yml
+++ b/config/locales/simple_form.en.yml
@@ -1,31 +1,19 @@
-en:
+ru:
+  helpers:
+    submit:
+      card:
+        create: 'Create card'
+        update: 'Update card'
   simple_form:
-    "yes": 'Yes'
-    "no": 'No'
     required:
       text: 'required'
       mark: '*'
-      # You can uncomment the line below if you need to overwrite the whole required html.
-      # When using html, text and mark won't be used.
-      # html: '<abbr title="required">*</abbr>'
-    error_notification:
-      default_message: "Please review the problems below:"
-    # Examples
-    # labels:
-    #   defaults:
-    #     password: 'Password'
-    #   user:
-    #     new:
-    #       email: 'E-mail to sign in.'
-    #     edit:
-    #       email: 'E-mail.'
-    # hints:
-    #   defaults:
-    #     username: 'User name to sign in.'
-    #     password: 'No special characters, please.'
-    # include_blanks:
-    #   defaults:
-    #     age: 'Rather not say'
-    # prompts:
-    #   defaults:
-    #     age: 'Select your age'
+    labels:
+      card:
+          original_text: 'Enter text for translate:'
+          translated_text: 'Enter translation:'
+          review_date: 'Enter review date:'
+    placeholders:
+      card:
+          original_text: 'Your text for translation'
+          translated_text: 'Translation'
