Back link & random record

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -11,3 +11,4 @@ en:
   edit_card: "Edit card"
   card_created: "Card successfully created"
   card_updated: "Card successfully updated"
+  back: 'Back'
