--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -14,3 +14,4 @@ ru:
   card_updated: "Карточка обновлена"
   original_text_err: 'Пожалуйста введите фразу'
   translated_text_err: 'Пожалуйста введите перевод'
+  back: 'Вернуться'
