Add form for card translation input

--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -15,3 +15,4 @@ ru:
   original_text_err: 'Пожалуйста введите фразу'
   translated_text_err: 'Пожалуйста введите перевод'
   back: 'Вернуться'
+  check: 'Проверить'
