--- a/config/locales/simple_form.en.yml
+++ b/config/locales/simple_form.en.yml
@@ -17,3 +17,4 @@ ru:
       card:
           original_text: 'Your text for translation'
           translated_text: 'Translation'
+          answer: 'Enter an answer'
