--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -16,3 +16,7 @@ ru:
   translated_text_err: 'Пожалуйста введите перевод'
   back: 'Вернуться'
   check: 'Проверить'
+  next_card: 'Следующая карточка'
+  checking: 'Проверяю'
+  wrong_answer: 'Неправильный ответ'
+  correct_answer: 'Правильный ответ'
