Registration form added

--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -22,3 +22,4 @@ ru:
   correct_answer: 'Правильный ответ'
   sign_in: 'Войти'
   sign_up: 'Регистрация'
+  account_creation: 'Создайте свой аккаунт'
