--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -23,3 +23,4 @@ ru:
   sign_in: 'Войти'
   sign_up: 'Регистрация'
   account_creation: 'Создайте свой аккаунт'
+  reg_success: 'Вы успешно зарегистрировали аккаунт'
