--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -24,3 +24,7 @@ ru:
   sign_up: 'Регистрация'
   account_creation: 'Создайте свой аккаунт'
   reg_success: 'Вы успешно зарегистрировали аккаунт'
+  login_success: 'Добро пожаловать в свой аккаунт'
+  login_failed: 'Ошибка авторизации'
+  logout: 'Выход из аккаунта'
+  sign_in_to_account: 'Вход в аккаунт'
