--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -26,5 +26,5 @@ ru:
   reg_success: 'Вы успешно зарегистрировали аккаунт'
   login_success: 'Добро пожаловать в свой аккаунт'
   login_failed: 'Ошибка авторизации'
-  logout: 'Выход из аккаунта'
+  logout: 'Выйти'
   sign_in_to_account: 'Вход в аккаунт'
