--- a/config/locales/simple_form.en.yml
+++ b/config/locales/simple_form.en.yml
@@ -6,6 +6,7 @@ ru:
         update: 'Update card'
       user:
         create: 'Register'
+        update: 'Update'
   simple_form:
     required:
       text: 'required'
