--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -25,3 +25,6 @@ en:
   login_failed: 'Login failed'
   logout: 'Logout'
   sign_in_to_account: 'Sign in to Flashcards'
+  profile: 'Profile'
+  account_edit: 'Edit your account'
+  account_updated: 'Account was successfully updated'
