--- a/config/locales/simple_form.ru.yml
+++ b/config/locales/simple_form.ru.yml
@@ -6,6 +6,7 @@ ru:
         update: 'Обновить карточку'
       user:
         create: 'Зарегистрироваться'
+        update: 'Обновить'
   simple_form:
     required:
       text: 'обязательное поле'
@@ -29,3 +30,15 @@ ru:
           email: 'Введите свой email'
           password: 'Введите пароль'
           password_confirmation: 'Пароль повторно'
+  activerecord:
+    errors:
+      models:
+        user:
+          attributes:
+            password:
+              too_short: 'Пароль должен быть не менее 6 символов'
+            password_confirmation:
+              confirmation: 'Пароли не совпадают'
+  attributes:
+    password: ''
+    password_confirmation: ''
