--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -31,3 +31,4 @@ ru:
   profile: 'Профиль'
   account_edit: 'Редактирование аккаунта'
   account_updated: 'Аккаунт обновлен'
+  need_login: 'Необходимо войти в аккаунт'
