User can view only his own cards

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1,6 +1,6 @@
 en:
   title: "Flashcards"
-  all_cards: "All cards"
+  my_cards: "My cards"
   add_card: "Add card"
   desc: "The world's first handy flash card manager. No jokes."
   original_text: "Original text"
