--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -1,6 +1,6 @@
 ru:
   title: "Флешкарточкер"
-  all_cards: "Все карточки"
+  my_cards: "Мои карточки"
   add_card: "Добавить карточку"
   desc: "Первый в мире удобный менеджер флеш-карточек. Именно так."
   original_text: "Оригинал"
