--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -37,3 +37,4 @@ ru:
   login_from: 'Вход из '
   failed_login_from: 'Не удалось войти из '
   enter_answer: 'Введите ответ'
+  select_img: 'Выберите картинку'
