--- a/config/locales/simple_form.en.yml
+++ b/config/locales/simple_form.en.yml
@@ -7,6 +7,8 @@ ru:
       user:
         create: 'Register'
         update: 'Update'
+      deck:
+        create: 'Create'
   simple_form:
     required:
       text: 'required'
@@ -20,6 +22,8 @@ ru:
         email: 'Your email:'
         password: 'Your password:'
         password_confirmation: 'Repeat your password'
+      deck:
+        name: 'Name:'
     placeholders:
       card:
           original_text: 'Your text for translation'
@@ -30,3 +34,22 @@ ru:
           email: 'Enter your email'
           password: 'Enter your password'
           password_confirmation: 'Password again'
+      deck:
+        name: 'Enter name of the deck'
+  activerecord:
+    errors:
+      models:
+        user:
+          attributes:
+            password:
+              too_short: 'Password must be at least 6 characters'
+            password_confirmation:
+              confirmation: 'Passwords does not match'
+        deck:
+          attributes:
+            name:
+              taken: 'Deck with this name already exist'
+  attributes:
+    password: ''
+    password_confirmation: ''
+    name: ''
