--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -43,5 +43,10 @@ ru:
   deck_created: 'Колода создана'
   name: 'Название'
   description: 'Описание'
-  viewed?: 'Просматривается?'
   you_have_no_decks: 'На данный момент у Вас нет колод.'
+  viewed?: 'Просматривается?'
+  currently_viewed: 'Да'
+  currently_not_viewed: 'Нет'
+  delete_deck_confirm: 'Вы хотите удалить эту колоду?'
+  edit_deck: 'Редактировать колоду'
+  deck_updated: 'Колода обновлена'
