--- a/config/locales/simple_form.en.yml
+++ b/config/locales/simple_form.en.yml
@@ -9,6 +9,7 @@ ru:
         update: 'Update'
       deck:
         create: 'Create'
+        update: 'Update'
   simple_form:
     required:
       text: 'required'
