Reset prev activity when editing deck activity changed

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -47,3 +47,4 @@ en:
   delete_deck_confirm: 'Вы хотите удалить эту колоду?'
   edit_deck: 'Edit deck'
   deck_updated: 'Deck was successfully updated'
+  all_cards: 'All cards'
