Connect user with decks

--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -38,7 +38,7 @@ ru:
   failed_login_from: 'Не удалось войти из '
   enter_answer: 'Введите ответ'
   select_img: 'Выберите картинку'
-  my_decks: 'Мои колоды'
+  decks_list: 'Колоды'
   create_deck: 'Создать колоду'
   deck_created: 'Колода создана'
   name: 'Название'
@@ -46,8 +46,8 @@ ru:
   you_have_no_decks: 'На данный момент у Вас нет колод.'
   viewed?: 'Просматривается?'
   currently_viewed: 'Да'
-  currently_not_viewed: 'Нет'
   delete_deck_confirm: 'Вы хотите удалить эту колоду?'
+  currently_not_viewed: 'Нет'
   edit_deck: 'Редактировать колоду'
   deck_updated: 'Колода обновлена'
   deck_cards: 'Карточки'
