--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -35,7 +35,7 @@ en:
   failed_login_from: 'Failed to login from '
   enter_answer: 'Enter an answer'
   select_img: 'Choose an image'
-  my_decks: 'My decks'
+  decks_list: 'All decks'
   create_deck: 'Create deck'
   deck_created: 'Deck was created'
   name: 'Name'
