--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -51,3 +51,4 @@ ru:
   edit_deck: 'Редактировать колоду'
   deck_updated: 'Колода обновлена'
   deck_cards: 'Карточки'
+  remember_me: 'Запомнить меня'
