--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -48,3 +48,4 @@ en:
   edit_deck: 'Edit deck'
   deck_updated: 'Deck was successfully updated'
   deck_cards: 'All cards'
+  remember_me: 'Remember me'
