Clickable deck row

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -49,3 +49,4 @@ en:
   deck_updated: 'Deck was successfully updated'
   deck_cards: 'All cards'
   remember_me: 'Remember me'
+  show_deck_cards: 'Show cards of '
