--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -52,3 +52,4 @@ ru:
   deck_updated: 'Колода обновлена'
   deck_cards: 'Карточки'
   remember_me: 'Запомнить меня'
+  show_deck_cards: 'Просмотреть карточки '
