Time in cards review_date

--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -5,7 +5,7 @@ ru:
   desc: "Первый в мире удобный менеджер флеш-карточек. Именно так."
   original_text: "Оригинал"
   translated_text: "Перевод"
-  review_date: "Дата пересмотра"
+  review_date: "Доступна для проверки"
   action: "Действие"
   delete_card_confirm: "Вы хотите удалить эту карточку?"
   orig_text_trn_text_match_err: "Фраза для перевода не должна совпадать с переводом"
