Avatar for users

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -50,3 +50,5 @@ en:
   deck_cards: 'All cards'
   remember_me: 'Remember me'
   show_deck_cards: 'Show cards of '
+  your_avatar: 'Avatar:'
+  supported_formats: 'Supported formats: '
