--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -53,3 +53,5 @@ ru:
   deck_cards: 'Карточки'
   remember_me: 'Запомнить меня'
   show_deck_cards: 'Просмотреть карточки '
+  your_avatar: 'Аватарка:'
+  supported_formats: 'Поддерживаемые форматы: '
