Fix bug with disable edit/delete deck link

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -44,7 +44,8 @@ en:
   you_have_no_decks: 'You have no decks at this moment'
   currently_viewed: 'Yes'
   currently_not_viewed: 'No'
-  delete_deck_confirm: 'Вы хотите удалить эту колоду?'
+  delete_deck_confirm: 'Do you really want delete this deck?'
+  delete_deck: 'Delete deck'
   edit_deck: 'Edit deck'
   deck_updated: 'Deck was successfully updated'
   deck_cards: 'All cards'
