--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -56,3 +56,8 @@ ru:
   show_deck_cards: 'Просмотреть карточки '
   your_avatar: 'Аватарка:'
   supported_formats: 'Поддерживаемые форматы: '
+  your_answer: 'Ваш ответ:'
+  right_answer: 'Правильный ответ:'
+  typos_answer: 'Ответ засчитан'
+  cards_check_empty: 'На текущий момент нет доступных карточек.
+  Возвращайтесь через некоторое время.'
