--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -53,3 +53,5 @@ en:
   show_deck_cards: 'Show cards of '
   your_avatar: 'Avatar:'
   supported_formats: 'Supported formats: '
+  typos_answer: 'Answer counted'
+  cards_check_empty: 'For now all cards checked. Take a break and come back later.'
