--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -61,3 +61,5 @@ ru:
   typos_answer: 'Ответ засчитан'
   cards_check_empty: 'На текущий момент нет доступных карточек.
   Возвращайтесь через некоторое время.'
+  pending_cards: 'У Вас есть карточки, ожидающие проверки'
+  pending_cards_email_subject: 'Флешкарточкер: у Вас есть карточки, ожидающие проверки'
