--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -59,3 +59,4 @@ en:
   right_answer: 'Right answer:'
   pending_cards: 'You have some cards pending for check'
   pending_cards_email_subject: 'Flashcards: You have some cards pending for check'
+  picture: 'Picture'
