--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -63,3 +63,4 @@ ru:
   Возвращайтесь через некоторое время.'
   pending_cards: 'У Вас есть карточки, ожидающие проверки'
   pending_cards_email_subject: 'Флешкарточкер: у Вас есть карточки, ожидающие проверки'
+  picture: 'Картинка'
