--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -64,3 +64,6 @@ ru:
   pending_cards: 'У Вас есть карточки, ожидающие проверки'
   pending_cards_email_subject: 'Флешкарточкер: у Вас есть карточки, ожидающие проверки'
   picture: 'Картинка'
+  en: 'Английский'
+  ru: 'Русский'
+  change_lang: 'Сменить язык'
