--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -60,3 +60,6 @@ en:
   pending_cards: 'You have some cards pending for check'
   pending_cards_email_subject: 'Flashcards: You have some cards pending for check'
   picture: 'Picture'
+  en: 'English'
+  ru: 'Russian'
+  change_lang: 'Change app language'
